# Fokker-PlanckEquationSolver

./: .gitignore  CMakeLists.txt  gitignore
postprocessing/: config.py  plot_space_profile.py  plot_time_evolution.py  postprocess_common.py
src/: beam_pic.cpp  beam_pic.h  collision.cpp  collision.h  config.cpp  config.h  diagnostics.cpp  diagnostics.h  grid.h  main.cpp  maxwell.cpp  maxwell.h  parameters.h  species.cpp  species.h  vlasov.cpp  vlasov.h
